--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 
 <!-- INDEX.HTML -->
-<html>
+<html lang="en-US">
 	<head>
-		<title>PICARD</title>
-		
+		<title>Books R Us</title>
+		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="src/style.css"/>
 	</head>
 	<body>
 		<div id="header">
 			<img src="img/Captain_Picard_Chair.jpg" alt="picard's face"/>
-
+		<hr>
 			<h1>Jean Luc Picard</h1>
 		</div>
 		<p>Captain Jean-Luc Picard <span class="special">etc...</span></p>
