--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div id="header">
 			<img src="img/Captain_Picard_Chair.jpg" alt="picard's face"/>
 		<hr>
-			<h1>Jean Luc Picard</h1>
+			<h1>Jean Luck Picard</h1>
 		</div>
 		<p>Captain Jean-Luc Picard <span class="special">etc...</span></p>
 
