--- a/index.html
+++ b/index.html
@@ -2,39 +2,27 @@
 
 <!-- INDEX.HTML -->
 <html lang="en-US">
-	<head>
-		<title>Books R Us</title>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="src/style.css"/>
-	</head>
-	<body>
-		<div id="header">
-			<img src="img/Captain_Picard_Chair.jpg" alt="picard's face"/>
-		<hr>
-			<h1>Jean Luck Picard</h1>
-		</div>
-		<p>Captain Jean-Luc Picard <span class="special">etc...</span></p>
-
+<head>
+	<title>Books R Us</title>
+	<meta charset="UTF-8"/>
+	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+</head>
+<body>
+	<div id="header">
+		<img src="img/iconBook.jpg" alt="Books R Us Logo"/>
+		<h1>Books R Us</h1>
+	</div>
+	<div id="navBar">
 		<ul>
-			<li class="special">Favourite Tea: Earl Grey</li>
-			<li>Famous Quote: Make it so</li>
+			<li class="active"><a href="index.html">Featured</a></li>
+			<li><a href="#">Top Sellers</a></li>
+			<li><a href="#">Classics</a></li>
+			<li><a href="#">Books By Age</a></li>
+			<li><a href="#">Books By Genre</a></li>
+			<li><a href="#">Sale</a></li>
 		</ul>
+	</div>
+	<p>Books R Us is an online bookstore tailored to providing children with enjoyable books for them to read. We pride ourselves in providing excellent customer service and educational and inspiring literature for the children's young and developing minds. </p>
 
-		<table>
-			<tr>
-				<th>Years</th><th>Employment History</th><th>Description</th>
-			</tr>
-
-			<tr>
-				<th>303030</th><th>Captain of the starship enterprise</th><th>hustled</th>
-			</tr>
-
-			<tr>
-				<th>505050505</th><th>First officer on the star gazer</th><th>hustled</th>
-			</tr>
-
-
-		</table>
-
-	</body>
+</body>
 </html>
