Added Page Structures and Home Button Implementation
- Added all pages
- Made Logo and Title Links to Home Page (Featured Page)

--- a/topSellers.html
+++ b/topSellers.html
@@ -14,8 +14,8 @@
 	</div>
 	<div id="navBar">
 		<ul>
-			<li class="active"><a href="index.html">Featured</a></li>
-			<li><a href="topSellers.html">Top Sellers</a></li>
+			<li><a href="index.html">Featured</a></li>
+			<li class="active"><a href="topSellers.html">Top Sellers</a></li>
 			<li><a href="classics.html">Classics</a></li>
 			<li><a href="booksByAge.html">Books By Age</a></li>
 			<li><a href="booksByGenre.html">Books By Genre</a></li>
@@ -23,7 +23,7 @@
 		</ul>
 	</div>
 	<div class=mainContent>
-		<h2>Featured Page Is Under Construction...</h2>
+		<h2>Top Sellers Page Is Under Construction...</h2>
 		<p>Our website is under construction, but below is our introduction!</p>
 		<h3>Introduction</h3>
 		<p>Books R Us is an online bookstore tailored to providing children with enjoyable books for them to read. We pride ourselves in providing excellent customer service and educational and inspiring literature for the children's young and developing minds. </p>
