--- a/about.html
+++ b/about.html
@@ -8,9 +8,11 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
-	<div id="header">
-    <a href="index.html"><img src="img/iconBook.jpg" alt="Books R Us Logo"/></a>
-    <a href="index.html" class="homeLink"><h1>Books R Us</h1></a>
+  <div id="header">
+		<a href="index.html"><img src="img/iconBook.jpg" alt="Books R Us Logo"/></a>
+		<a href="index.html" class="homeLink"><h1>Books R Us</h1></a>
+		<a href="signUp.html" class="signUp"><h3>Sign Up</h3></a>
+		<a href="logIn.html" class="logIn"><h3>Log In</h3></a>
 	</div>
 	<div id="navBar">
 		<ul>
@@ -36,9 +38,9 @@
       We believe that reading is one of the best tools for kids to share laughter and joy to the world. But to do that, we want parents to be there to support their child. Parents will actively engage with their child as they shop around the site. Interactions between parent and children will promote a stronger relationship and healthy buying habits.
     </p>
   </div>
-</body>
 <footer>
 	<a href="about.html">About Us</a>
 	<p>Created by Brandon Lim and Francis Hong</p>
 </footer>
+</body>
 </html>
