--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<div id="header">
 		<a href="index.html"><img src="img/iconBook.jpg" alt="Books R Us Logo"/></a>
 		<a href="index.html" class="homeLink"><h1>Books R Us</h1></a>
+		<a href="signUp.html" class="signUp"><h3>Sign Up</h3></a>
+		<a href="login.html" class="logIn"><h3>Log In</h3></a>
 	</div>
 	<div id="navBar">
 		<ul>
@@ -28,9 +30,9 @@
 		<h3>Introduction</h3>
 		<p>Books R Us is an online bookstore tailored to providing children with enjoyable books for them to read. We pride ourselves in providing excellent customer service and educational and inspiring literature for the children's young and developing minds. </p>
 	</div>
-</body>
 <footer>
 	<a href="about.html">About Us</a>
 	<p>Created by Brandon Lim and Francis Hong</p>
 </footer>
+</body>
 </html>
