--- a/logIn.html
+++ b/logIn.html
@@ -8,24 +8,24 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
-  <div id="header">
+	<div id="header">
 		<a href="index.html"><img src="img/iconBook.jpg" alt="Books R Us Logo"/></a>
 		<a href="index.html" class="homeLink"><h1>Books R Us</h1></a>
 		<a href="signUp.html" class="signUp"><h3>Sign Up</h3></a>
 		<a href="logIn.html" class="logIn"><h3>Log In</h3></a>
 	</div>
 	<div id="navBar">
-    <ul>
+		<ul>
 			<li><a href="index.html">Featured</a></li>
 			<li><a href="topSellers.html">Top Sellers</a></li>
-			<li class="active"><a href="classics.html">Classics</a></li>
+			<li><a href="classics.html">Classics</a></li>
 			<li><a href="booksByAge.html">Books By Age</a></li>
 			<li><a href="booksByGenre.html">Books By Genre</a></li>
 			<li><a href="sale.html">Sale</a></li>
 		</ul>
 	</div>
 	<div class=mainContent>
-		<h2>Classics Page Is Under Construction...</h2>
+		<h2>Login Page Is Under Construction...</h2>
 		<p>Our website is under construction, but below is our introduction!</p>
 		<h3>Introduction</h3>
 		<p>Books R Us is an online bookstore tailored to providing children with enjoyable books for them to read. We pride ourselves in providing excellent customer service and educational and inspiring literature for the children's young and developing minds. </p>
