--- a/catalogue.html
+++ b/catalogue.html
@@ -185,6 +185,20 @@
 						<input type="text" name="corduroyQuantity" size="3" />
 					</td>
 				</tr>
+				<tr>
+					<td>
+						<p></p>
+					</td>
+					<td>
+						<p></p>
+					</td>
+					<td>
+						<input type="submit" value="Submit Form"  />
+					</td>
+					<td>
+						<input type="reset" value="Clear Form"  />
+					</td>
+				</tr>
 			</table>
 		</form>
 	</div>
